--- a/application/client/public/index.html
+++ b/application/client/public/index.html
@@ -21,7 +21,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -47,5 +47,10 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script src="https://kit.fontawesome.com/59fef1d379.js" crossorigin="anonymous"></script>
+  <script
+    src="https://kit.fontawesome.com/59fef1d379.js"
+    crossorigin="anonymous"
+  ></script>
+  <script type="module" src="./my-module.js"></script>
+  <script type="module" src="./my-script.js"></script>
 </html>
